--- a/cloud/websites/code.gridlabd.us/index.html
+++ b/cloud/websites/code.gridlabd.us/index.html
@@ -1,8 +1,8 @@
 <HTML>
 <HEAD>
-<META HTTP-EQUIV="refresh" CONTENT="0,url=https://github.com/slacgismo/gridlabd" />
+<META HTTP-EQUIV="refresh" CONTENT="0,url=https://github.com/hipas/gridlabd" />
 </HEAD>
 <BODY>
-Redirecting to <A HREF="https://github.com/slacgismo/gridlabd">https://github.com/slacgismo/gridlabd</A>...
+Redirecting to <A HREF="https://github.com/hipas/gridlabd">https://github.com/hipas/gridlabd</A>...
 </BODY>
 </HTML>
